[gd_scene load_steps=7 format=2]

[ext_resource path="res://LevelSelectMenu.gd" type="Script" id=1]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 2 )

[node name="LevelSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Level1Button" type="Button" parent="."]
margin_left = 169.0
margin_top = 391.0
margin_right = 346.0
margin_bottom = 553.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Level2Button" type="Button" parent="."]
margin_left = 505.0
margin_top = 393.0
margin_right = 693.0
margin_bottom = 559.0
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="Level3Button" type="Button" parent="."]
margin_left = 855.0
margin_top = 399.0
margin_right = 1025.0
margin_bottom = 567.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "3"

[connection signal="button_up" from="Level1Button" to="." method="_on_Level1Button_button_up"]
[connection signal="button_up" from="Level2Button" to="." method="_on_Level2Button_button_up"]
[connection signal="button_up" from="Level3Button" to="." method="_on_Level3Button_button_up"]
